--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,8 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'clean package'
+
+- task: CopyFiles@1
+  displayName: "Copying CopyFiles"
+  
+    
